force-app/main/default/objects/EquipmentDelivery__c/EquipmentDelivery__c.object-meta.xml
<CustomObject>
    <label>장비배송</label>
    <nameField>
        <label>Equipment Delivery Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>