force-app/main/default/objects/EquipmentDelivery__c/fields/BillToContactId__c.field-meta.xml
<CustomField>
    <fullName>BillToContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipment Delivery</relationshipLabel>
    <relationshipName>Equipment_Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>