force-app/main/default/objects/EquipmentDelivery__c/fields/EquipmentDeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>EquipmentDeliveryNumber__c</fullName>
    <displayFormat>ED{YYYYMMDD}-{00000}</displayFormat>
    <label>Equipment Delivery Number</label>
    <type>AutoNumber</type>
</CustomField>