force-app/main/default/objects/EquipmentDelivery__c/fields/FulfilledToAddress__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToAddress__c</fullName>
    <label>Fulfilled To Address</label>
    <type>Address</type>
</CustomField>