force-app/main/default/objects/EquipmentDelivery__c/fields/FulfilledToName__c.field-meta.xml
<CustomField>
    <fullName>FulfilledToName__c</fullName>
    <label>Request Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>