force-app/main/default/objects/EquipmentDelivery__c/fields/StatusCategory__c.field-meta.xml
<CustomField>
    <fullName>StatusCategory__c</fullName>
    <label>Status Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
            </value>
            <value>
                <fullName>ACTIVATED</fullName>
            </value>
            <value>
                <fullName>FULFILLING</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>